added compton config file

--- a/compton.conf
+++ b/compton.conf
@@ -29,8 +29,8 @@ shadow-exclude = [
 # xinerama-shadow-crop = true;
 
 # Opacity
-# menu-opacity = 0.92;
-# inactive-opacity = 0.92;
+menu-opacity = 0.8;
+inactive-opacity = 0.8;
 # active-opacity = 0.92;
 # frame-opacity = 0.9;
 inactive-opacity-override = false;
